# timeserver

./: CMakeLists.txt  LICENSE  LICENSE.BSD-3-Clause  LICENSE.md  README.md  TimeServer.camkes
camkes/: TimeServer.camkes
client/include/: TimeServer.h
client/src/: TimeServer.c
include/: TimeServer.h
server/: CHANGELOG  CHANGELOG.md
server/include/plat/bcm2711/plat/: timers.h
server/include/plat/bcm2837/plat/: timers.h
server/include/plat/fvp/plat/: timers.h
server/include/plat/migv/plat/: timers.h
server/include/plat/odroidc2/plat/: timers.h
server/include/plat/qemu-arm-virt/plat/: timers.h
server/include/plat/qemu-riscv-virt/plat/: timers.h
server/include/plat/xavier/plat/: timers.h
server/src/: timeServer_rpc.c
src/: TimeServer.c  time_server.c
